Додавання простої стартової сторінки з зображенням

--- a/index.html
+++ b/index.html
@@ -1,14 +1,65 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="uk">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/lightning-icon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="description" content="ChargeTap - революційна технологія безпровідної зарядки пристроїв" />
-    <title>ChargeTap | Майбутнє зарядки в твоїй руці</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ChargeTap | Майбутнє зарядки в твоїй руці</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #0d0d0d;
+      color: white;
+      text-align: center;
+    }
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 40px 20px;
+    }
+    h1 {
+      color: #ff8c00;
+      font-size: 4rem;
+      margin-bottom: 20px;
+    }
+    .image-container {
+      margin: 40px 0;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+    .button {
+      background-color: #ff8c00;
+      color: #0d0d0d;
+      border: none;
+      padding: 15px 30px;
+      font-size: 1.2rem;
+      font-weight: bold;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: all 0.3s;
+      display: inline-block;
+      margin-top: 30px;
+      text-decoration: none;
+    }
+    .button:hover {
+      background-color: #ffa500;
+      transform: scale(1.05);
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>ChargeTap</h1>
+    <p>Майбутнє зарядки в твоїй руці</p>
+    
+    <div class="image-container">
+      <img src="https://raw.githubusercontent.com/DorvieC/charge-tap-landing/gh-pages/assets/Zevs2-CX-yNZmS.png" alt="Зевс" />
+    </div>
+    
+    <a href="https://dorviec.github.io/charge-tap-landing/public/zevs.html" class="button">Перейти до сайту</a>
+  </div>
+</body>
 </html>
